# help2man

./: Makefile.in  NEWS  THANKS  aclocal.m4  configure.ac  configure.in  hacklocaledir.c  help2man.PL  help2man.de.h2m  help2man.fi.h2m  help2man.fr.h2m  help2man.h2m  help2man.h2m.PL  help2man.html.PL  help2man.pl.h2m  help2man.pt_BR.h2m  help2man.sv.h2m  help2man.texi  locales  mkpot
build-aux/: fixup-texi-pot  fixup-texi-trans
debian/: changelog  changelog.old  control  copyright  docs  rules
po/: da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  help2man.pot  hr.po  hu.po  it.po  ja.po  ka.po  ko.po  nb.po  pl.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  ta.po  uk.po  vi.po  zh_CN.po
po-texi/: de.po  es.po  fr.po  help2man-texi.pot  pl.po  pt_BR.po  ro.po  sr.po  sv.po  uk.po  zh_CN.po
