dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.5 2003-07-08 15:25:57 bod Exp $

AC_INIT(help2man.PL)
AC_PROG_PERL(5.005)
test -z "$PERL" && AC_MSG_ERROR([perl 5.005 required])
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(MAKEINFO, makeinfo)
AC_PATH_PROG(INSTALL_INFO, install-info)
test -z "$MAKEINFO"     && MAKEINFO=:
test -z "$INSTALL_INFO" && INSTALL_INFO=:
AC_OUTPUT(Makefile)
